crates/monkey-lang/src/parsing/snapshots/lexer/monkey_lang__parsing__lexer__tests__lexer@bool_lit.snap
---
source: crates/monkey-lang/src/parsing/lexer.rs
expression: lex(&input)

---
[
    Ok(
        Token {
            span: Span {
                start: 0,
                end: 4,
            },
            kind: TrueKw,
            text: "true",
        },
    ),
    Ok(
        Token {
            span: Span {
                start: 4,
                end: 5,
            },
            kind: Semicolon,
            text: ";",
        },
    ),
    Ok(
        Token {
            span: Span {
                start: 6,
                end: 11,
            },
            kind: FalseKw,
            text: "false",
        },
    ),
    Ok(
        Token {
            span: Span {
                start: 11,
                end: 12,
            },
            kind: Semicolon,
            text: ";",
        },
    ),
]
