crates/monkey-lang/src/parsing/snapshots/lexer/monkey_lang__parsing__lexer__tests__lexer@comments.snap
---
source: crates/monkey-lang/src/parsing/lexer.rs
expression: actual_tokens

---
[
    Ok(
        Token {
            span: Span {
                start: 26,
                end: 28,
            },
            kind: ShiftRight,
            text: ">>",
        },
    ),
    Ok(
        Token {
            span: Span {
                start: 29,
                end: 30,
            },
            kind: Eq,
            text: "=",
        },
    ),
    Ok(
        Token {
            span: Span {
                start: 31,
                end: 32,
            },
            kind: Semicolon,
            text: ";",
        },
    ),
]
