crates/monkey-lang/src/parsing/snapshots/lexer/monkey_lang__parsing__lexer__tests__lexer@delimiters.snap
---
source: crates/monkey-lang/src/parsing/lexer.rs
expression: "Lexer::new(&input).lex_until_eof()"

---
[
    Ok(
        Token {
            span: Span {
                start: 0,
                end: 1,
            },
            kind: LParen,
            text: "(",
        },
    ),
    Ok(
        Token {
            span: Span {
                start: 1,
                end: 2,
            },
            kind: RParen,
            text: ")",
        },
    ),
    Ok(
        Token {
            span: Span {
                start: 2,
                end: 3,
            },
            kind: LBrace,
            text: "{",
        },
    ),
    Ok(
        Token {
            span: Span {
                start: 3,
                end: 4,
            },
            kind: RBrace,
            text: "}",
        },
    ),
    Ok(
        Token {
            span: Span {
                start: 4,
                end: 5,
            },
            kind: LBracket,
            text: "[",
        },
    ),
    Ok(
        Token {
            span: Span {
                start: 5,
                end: 6,
            },
            kind: RBracket,
            text: "]",
        },
    ),
    Ok(
        Token {
            span: Span {
                start: 7,
                end: 8,
            },
            kind: RParen,
            text: ")",
        },
    ),
    Ok(
        Token {
            span: Span {
                start: 8,
                end: 9,
            },
            kind: LBrace,
            text: "{",
        },
    ),
    Ok(
        Token {
            span: Span {
                start: 9,
                end: 10,
            },
            kind: RBracket,
            text: "]",
        },
    ),
    Ok(
        Token {
            span: Span {
                start: 10,
                end: 11,
            },
            kind: RParen,
            text: ")",
        },
    ),
    Ok(
        Token {
            span: Span {
                start: 11,
                end: 12,
            },
            kind: LParen,
            text: "(",
        },
    ),
]
