crates/monkey-lang/src/parsing/snapshots/lexer/monkey_lang__parsing__lexer__tests__lexer@ident.snap
---
source: crates/monkey-lang/src/parsing/lexer.rs
expression: actual_tokens

---
[
    Ok(
        Token {
            span: Span {
                start: 0,
                end: 11,
            },
            kind: Ident,
            text: "first_ident",
        },
    ),
    Ok(
        Token {
            span: Span {
                start: 12,
                end: 13,
            },
            kind: Plus,
            text: "+",
        },
    ),
    Ok(
        Token {
            span: Span {
                start: 14,
                end: 27,
            },
            kind: Ident,
            text: "another_ident",
        },
    ),
]
