crates/monkey-lang/src/parsing/snapshots/lexer/monkey_lang__parsing__lexer__tests__lexer@keyword.snap
---
source: crates/monkey-lang/src/parsing/lexer.rs
expression: actual_tokens

---
[
    Ok(
        Token {
            span: Span {
                start: 0,
                end: 3,
            },
            kind: KwLet,
            text: "let",
        },
    ),
    Ok(
        Token {
            span: Span {
                start: 4,
                end: 7,
            },
            kind: Ident,
            text: "var",
        },
    ),
    Ok(
        Token {
            span: Span {
                start: 8,
                end: 9,
            },
            kind: Eq,
            text: "=",
        },
    ),
    Ok(
        Token {
            span: Span {
                start: 10,
                end: 11,
            },
            kind: Semicolon,
            text: ";",
        },
    ),
    Ok(
        Token {
            span: Span {
                start: 12,
                end: 18,
            },
            kind: KwReturn,
            text: "return",
        },
    ),
    Ok(
        Token {
            span: Span {
                start: 19,
                end: 21,
            },
            kind: KwIf,
            text: "if",
        },
    ),
    Ok(
        Token {
            span: Span {
                start: 22,
                end: 26,
            },
            kind: Ident,
            text: "then",
        },
    ),
]
