crates/monkey-lang/src/parsing/snapshots/lexer/monkey_lang__parsing__lexer__tests__lexer@numbers.snap
---
source: crates/monkey-lang/src/parsing/lexer.rs
expression: lex(&input)

---
[
    Ok(
        Token {
            span: Span {
                start: 0,
                end: 3,
            },
            kind: LetKw,
            text: "let",
        },
    ),
    Ok(
        Token {
            span: Span {
                start: 4,
                end: 7,
            },
            kind: Ident,
            text: "num",
        },
    ),
    Ok(
        Token {
            span: Span {
                start: 8,
                end: 9,
            },
            kind: Eq,
            text: "=",
        },
    ),
    Ok(
        Token {
            span: Span {
                start: 10,
                end: 16,
            },
            kind: Number,
            text: "14_323",
        },
    ),
    Ok(
        Token {
            span: Span {
                start: 16,
                end: 17,
            },
            kind: Semicolon,
            text: ";",
        },
    ),
]
