crates/monkey-lang/src/parsing/snapshots/lexer/monkey_lang__parsing__lexer__tests__lexer@operators.snap
---
source: crates/monkey-lang/src/parsing/lexer.rs
expression: "Lexer::new(&input).lex_until_eof()"

---
[
    Ok(
        Token {
            span: Span {
                start: 0,
                end: 1,
            },
            kind: Asterisk,
            text: "*",
        },
    ),
    Ok(
        Token {
            span: Span {
                start: 2,
                end: 3,
            },
            kind: Modulo,
            text: "%",
        },
    ),
    Ok(
        Token {
            span: Span {
                start: 4,
                end: 5,
            },
            kind: Plus,
            text: "+",
        },
    ),
    Ok(
        Token {
            span: Span {
                start: 6,
                end: 7,
            },
            kind: Minus,
            text: "-",
        },
    ),
    Ok(
        Token {
            span: Span {
                start: 8,
                end: 9,
            },
            kind: Tilde,
            text: "~",
        },
    ),
    Ok(
        Token {
            span: Span {
                start: 10,
                end: 11,
            },
            kind: Gt,
            text: ">",
        },
    ),
    Ok(
        Token {
            span: Span {
                start: 12,
                end: 13,
            },
            kind: Lt,
            text: "<",
        },
    ),
    Ok(
        Token {
            span: Span {
                start: 14,
                end: 15,
            },
            kind: Bang,
            text: "!",
        },
    ),
    Ok(
        Token {
            span: Span {
                start: 16,
                end: 18,
            },
            kind: Slash,
            text: "/\n",
        },
    ),
]
