crates/monkey-lang/src/parsing/snapshots/lexer/monkey_lang__parsing__lexer__tests__lexer@punct.snap
---
source: crates/monkey-lang/src/parsing/lexer.rs
expression: actual_tokens

---
[
    Ok(
        Token {
            span: Span {
                start: 0,
                end: 1,
            },
            kind: Semicolon,
            text: ";",
        },
    ),
    Ok(
        Token {
            span: Span {
                start: 1,
                end: 2,
            },
            kind: Dot,
            text: ".",
        },
    ),
    Ok(
        Token {
            span: Span {
                start: 2,
                end: 3,
            },
            kind: Comma,
            text: ",",
        },
    ),
    Ok(
        Token {
            span: Span {
                start: 3,
                end: 4,
            },
            kind: Dot,
            text: ".",
        },
    ),
    Ok(
        Token {
            span: Span {
                start: 4,
                end: 5,
            },
            kind: Colon,
            text: ":",
        },
    ),
    Ok(
        Token {
            span: Span {
                start: 6,
                end: 7,
            },
            kind: Eq,
            text: "=",
        },
    ),
]
