crates/monkey-lang/src/parsing/snapshots/lexer/monkey_lang__parsing__lexer__tests__lexer@test.snap
---
source: crates/monkey-lang/src/parsing/lexer.rs
expression: lex(&input)

---
[
    Ok(
        Token {
            span: Span {
                start: 0,
                end: 4,
            },
            kind: Ident,
            text: "helo",
        },
    ),
    Ok(
        Token {
            span: Span {
                start: 5,
                end: 13,
            },
            kind: Ident,
            text: "pasdpofi",
        },
    ),
    Ok(
        Token {
            span: Span {
                start: 14,
                end: 21,
            },
            kind: Number,
            text: "1341324",
        },
    ),
]
